feat: Add Triton Inference Server integration
- Add InferenceClient abstraction layer with Triton gRPC and local PyTorch support
- Refactor eval_policy.py, inspect_model_predictions.py, debug_policy_api.py to use InferenceClient
- Add Docker Compose setup for Triton server deployment
- Add model repository structure with config.pbtxt
- Add export scripts for model conversion (ONNX/PyTorch)
- Add test_triton_connection.py utility for health checks
- Add comprehensive deployment documentation
- Update .gitignore for Triton artifacts

Architecture changes:
- Factory pattern for inference mode switching (local/triton)
- Environment-based configuration via INFERENCE_MODE
- Automatic image preprocessing and normalization
- Support for both CHW and HWC image formats

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ output_csvs/
 data/
 .mypy_cache/
 .ruff_cache
+
+# Triton model repository (ONNX models are large)
+model_repository/*/1/*.onnx
+model_repository/*/1/*.pt
+model_repository/*/*.plan
+
+# Environment configuration (may contain secrets)
+.env
