fix: Update docker-compose to build custom Triton image and fix config.pbtxt
- Change triton service from image: to build: configuration
- Point to docker/Dockerfile.triton for custom build
- Remove invalid EXECUTION_ENV_PATH from config.pbtxt
- Ready for L4 instance deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
   triton:
-    image: nvcr.io/nvidia/tritonserver:24.01-py3
+    build:
+      context: ./docker
+      dockerfile: Dockerfile.triton
     container_name: triton-inference-server
     ports:
       - "8000:8000" # HTTP
