--- a/docker/Dockerfile.triton
+++ b/docker/Dockerfile.triton
@@ -47,10 +47,10 @@ RUN pip install --no-cache-dir \
 RUN pip cache purge
 
 # Verify installations
-RUN python -c "import torch; print(f'PyTorch: {torch.__version__}')" && \
-    python -c "import lerobot; print('LeRobot: OK')" && \
-    python -c "import safetensors; print('SafeTensors: OK')" && \
-    python -c "import triton_python_backend_utils as pb_utils; print('Triton Python Backend: OK')"
+RUN python3 -c "import torch; print(f'PyTorch: {torch.__version__}')" && \
+    python3 -c "import lerobot; print('LeRobot: OK')" && \
+    python3 -c "import safetensors; print('SafeTensors: OK')" && \
+    python3 -c "import triton_python_backend_utils as pb_utils; print('Triton Python Backend: OK')"
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
