--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ./docker
       dockerfile: Dockerfile.triton
     container_name: triton-inference-server
+    shm_size: '4gb'
     ports:
       - "8000:8000" # HTTP
       - "8001:8001" # gRPC
