--- a/nim_wrapper/Dockerfile
+++ b/nim_wrapper/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
+    python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
